改为离线页面

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </style>
   </head>
   <body>
-    <webview autosize="on" src="https://hapjs.github.io/h5-games/build/tetris.html" 
+    <webview autosize="on" src="build/tetris.html" 
       style="display:inline-flex; width:400px; height:600px">
     </webview>
   </body>
